--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -45,7 +45,7 @@
     </div>
     <!--Websites Button-->
     <a class="btn btn-primary btn-block"
-       href="#/user/{{model.user._id}}/website">Websites</a>
+       href="#/user/{{model.userId}}/website">Websites</a>
     <!--Logout Button-->
     <a class="btn btn-danger btn-block"
        href="#/login">Logout</a>
