--- a/public/assignment/views/website/website-list.view.client.html
+++ b/public/assignment/views/website/website-list.view.client.html
@@ -3,12 +3,14 @@
     <div class="row">
       <div class="col-xs-6 navbar-header">
         <div class="navbar-brand">
+          <!--Link to websites-->
           <a href="#/user/{{model.userId}}" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link">Websites</a>
         </div>
       </div>
       <div class="col-xs-6">
         <p class="navbar-text pull-right">
+          <!--Link to new website-->
           <a class="navbar-link" href="#/user/{{model.userId}}/website/new"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
@@ -17,6 +19,7 @@
 </nav>
 
 
+<!--List of websites-->
 <div class="container-fluid padding">
   <div ng-repeat="website in model.websites" class="padding-vert">
     <a href="#/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a>
@@ -28,6 +31,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-text pull-right">
+      <!--Link to profile-->
       <a href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user"></span></a>
     </div>
   </div>
