--- a/public/assignment/views/website/website-new.view.client.html
+++ b/public/assignment/views/website/website-new.view.client.html
@@ -5,10 +5,12 @@
 
       <div class="col-xs-4 container-fluid">
         <div class="navbar-brand">
+          <!--Back to website list-->
           <a href="#/user/{{model.userId}}/website" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
           <a class="navbar-link">Websites</a>
         </div>
         <p class="navbar-text pull-right">
+          <!--Link to new website-->
           <a class="navbar-link" href="#/user/{{model.userId}}/website/new"><span class="glyphicon glyphicon-plus"></span></a>
         </p>
       </div>
@@ -18,8 +20,8 @@
           <a class="navbar-link">New Website</a>
         </div>
         <p class="navbar-text pull-right">
-          <!--create website-->
-          <a ng-click="model.createWebsite(model.name, model.description)" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
+          <!--Confirm details and create the website-->
+          <a ng-click="model.createWebsite()" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
         </p>
       </div>
 
@@ -32,12 +34,13 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-brand">
+        <!--Back to website list-->
         <a href="#/user/{{model.userId}}/website" class="navbar-link"><span class="glyphicon glyphicon-chevron-left"></span></a>
         <a class="navbar-link">New Website</a>
       </div>
       <p class="navbar-text pull-right">
-        <!--create website-->
-        <a ng-click="model.createWebsite(model.name, model.description)" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
+        <!--Confirm details and create the website-->
+        <a ng-click="model.createWebsite()" class="navbar-link"><span class="glyphicon glyphicon-ok"></span></a>
       </p>
     </div>
   </nav>
@@ -47,6 +50,9 @@
   <div class="hidden-xs vert_line"></div>
 
   <div class="row">
+
+
+    <!--Left panel containing the website list-->
     <div class="hidden-xs col-xs-4">
       <div class="container-fluid padding">
 
@@ -57,6 +63,8 @@
       </div>
     </div>
 
+
+    <!--Right panel containing details for the new website-->
     <div class="col-xs-12 col-sm-8 padding">
       <!--name-->
       <div class="form-group">
@@ -69,6 +77,7 @@
         <textarea ng-model="model.description" class="form-control" id="description" placeholder="Description" rows="5"></textarea>
       </div>
     </div>
+
 
   </div>
 </div>
